--- a/index.html
+++ b/index.html
@@ -284,9 +284,13 @@
                     </p>
                 </div>
             </div>
+            <span class="loading"></span>
+            <span class="icon close-content">&times;</span>
         </div>
+    </section>
 
-        <!--================== Team section =====================
+
+    <!--================== Team section =====================
         <div id="teams">
             <div class="container">
                 <div class="teams-heading text-center col-md-8 offset-md-2 col-sm-12 text-center">
@@ -577,189 +581,189 @@
         </div>-->
 
 
-        <!--================== Blog section =====================-->
-        <div id="blog" class="blog">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="blog-item-box">
-                            <figure class="blog-item">
-                                <div class="image">
-                                    <img src="./img/sample74.jpg" alt="sample74" />
+    <!--================== Blog section =====================-->
+    <div id="blog" class="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="blog-item-box">
+                        <figure class="blog-item">
+                            <div class="image">
+                                <img src="./img/sample74.jpg" alt="sample74" />
 
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
 
-                                    <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
-                                </div>
-                                <figcaption>
-                                    <h3>The World Ended Yesterday</h3>
-                                    <p>I don't know which is worse, ...that everyone has his price, or that the price is always so low.</p>
-                                    <a href="#" class="read-more">Read More</a>
-                                </figcaption>
-                            </figure>
-                        </div>
+                                <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+                            </div>
+                            <figcaption>
+                                <h3>The World Ended Yesterday</h3>
+                                <p>I don't know which is worse, ...that everyone has his price, or that the price is always so low.</p>
+                                <a href="#" class="read-more">Read More</a>
+                            </figcaption>
+                        </figure>
                     </div>
-                    <div class="col-sm">
-                        <div class="blog-item-box">
-                            <figure class="blog-item">
-                                <div class="image">
-                                    <img src="./img/sample84.jpg" alt="sample87" />
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                    <div class="date"><span class="day">22</span>
-                                        <span class="month">Nov</span></div>
-                                </div>
-                                <figcaption>
-                                    <h3>Sample Article Heading</h3>
-                                    <p>My family is dysfunctional and my parents won't empower me. Consequently I'm not self actualized.</p>
-                                    <a href="#" class="read-more">Read More</a>
-                                </figcaption>
-                            </figure>
-                        </div>
+                </div>
+                <div class="col-sm">
+                    <div class="blog-item-box">
+                        <figure class="blog-item">
+                            <div class="image">
+                                <img src="./img/sample84.jpg" alt="sample87" />
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <div class="date"><span class="day">22</span>
+                                    <span class="month">Nov</span></div>
+                            </div>
+                            <figcaption>
+                                <h3>Sample Article Heading</h3>
+                                <p>My family is dysfunctional and my parents won't empower me. Consequently I'm not self actualized.</p>
+                                <a href="#" class="read-more">Read More</a>
+                            </figcaption>
+                        </figure>
                     </div>
-                    <div class="col-sm">
-                        <div class="blog-item-box">
-                            <figure class="blog-item">
-                                <div class="image">
-                                    <img src="./img/sample87.jpg" alt="sample84" />
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                    <div class="date"><span class="day">26</span><span class="month">Nov</span></div>
-                                </div>
-                                <figcaption>
-                                    <h3>Another Sample Heading</h3>
-                                    <p>You know what we need, Hobbes? We need an attitude. Yeah, you can't be cool if you don't have an attitude.</p>
-                                    <a href="#" class="read-more">Read More</a>
-                                </figcaption>
-                            </figure>
-                        </div>
+                </div>
+                <div class="col-sm">
+                    <div class="blog-item-box">
+                        <figure class="blog-item">
+                            <div class="image">
+                                <img src="./img/sample87.jpg" alt="sample84" />
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <div class="date"><span class="day">26</span><span class="month">Nov</span></div>
+                            </div>
+                            <figcaption>
+                                <h3>Another Sample Heading</h3>
+                                <p>You know what we need, Hobbes? We need an attitude. Yeah, you can't be cool if you don't have an attitude.</p>
+                                <a href="#" class="read-more">Read More</a>
+                            </figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!--================== Contact section =====================-->
+    <!--================== Contact section =====================-->
 
-        <!--<div id="contact" class="contact">
+    <!--<div id="contact" class="contact">
             <div class="map">
                 <iframe height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=3%20Marina%20road%20Lagos%20Island%20Lagos&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
             </div>-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                    <h1 class="contact-heading">Lets Get In Touch</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum illum ratione atque praesentium laudantium quaerat laborum consecteturLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                <h1 class="contact-heading">Lets Get In Touch</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum illum ratione atque praesentium laudantium quaerat laborum consecteturLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-                    <div class="row margin-15px-bottom">
-                        <div class="col-sm-1 no-padding">
-                            <div class="contact-icon text-blue">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="col-sm-11">
-                            <p class="text-small">San Francisco, CA 560 Bush St &amp; 20th Ave,<br> Apt 5 San Francisco, 230909</p>
+                <div class="row margin-15px-bottom">
+                    <div class="col-sm-1 no-padding">
+                        <div class="contact-icon text-blue">
+                            <i class="fa fa-map-marker" aria-hidden="true"></i>
                         </div>
                     </div>
+                    <div class="col-sm-11">
+                        <p class="text-small">San Francisco, CA 560 Bush St &amp; 20th Ave,<br> Apt 5 San Francisco, 230909</p>
+                    </div>
+                </div>
 
-                    <div class="row margin-15px-bottom">
-                        <div class="col-sm-1 no-padding">
-                            <div class="contact-icon text-blue">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="col-sm-11">
-                            <p class="text-small">+01 2323 7328 322<br>+01 2323 7328 322</p>
+                <div class="row margin-15px-bottom">
+                    <div class="col-sm-1 no-padding">
+                        <div class="contact-icon text-blue">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
                         </div>
                     </div>
+                    <div class="col-sm-11">
+                        <p class="text-small">+01 2323 7328 322<br>+01 2323 7328 322</p>
+                    </div>
+                </div>
 
-                    <div class="row margin-15px-bottom">
-                        <div class="col-sm-1 no-padding">
-                            <div class="contact-icon text-blue">
-                                <i class="fa fa-globe" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                        <div class="col-sm-11 xs-margin-50px-bottom">
-                            <p class="text-small">email@demo.com<br>www.demo.com</p>
+                <div class="row margin-15px-bottom">
+                    <div class="col-sm-1 no-padding">
+                        <div class="contact-icon text-blue">
+                            <i class="fa fa-globe" aria-hidden="true"></i>
                         </div>
                     </div>
-
-
+                    <div class="col-sm-11 xs-margin-50px-bottom">
+                        <p class="text-small">email@demo.com<br>www.demo.com</p>
+                    </div>
                 </div>
 
 
-                <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
-                    <!-- Starting of ajax contact form -->
-                    <form class="contact__form" method="post" action="contact_mail.php">
-                        <!-- Element of the ajax contact form -->
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <input name="name" type="text" class="form-control" placeholder="Name" required>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input name="email" type="email" class="form-control" placeholder="Email" required>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input name="phone" type="text" class="form-control" placeholder="Phone" required>
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <input name="subject" type="text" class="form-control" placeholder="Subject" required>
-                            </div>
-                            <div class="col-12 form-group">
-                                <textarea name="message" class="form-control" rows="3" placeholder="Message" required></textarea>
-                            </div>
-                            <div class="col-12">
-                                <input name="submit" type="submit" class="button-style" value="Send Message">
-                            </div>
-                        </div>
+            </div>
 
 
-                    </form>
-                    <!-- Ending of ajax contact form -->
-                    <!-- Starting of successful form message -->
+            <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+                <!-- Starting of ajax contact form -->
+                <form class="contact__form" method="post" action="contact_mail.php">
+                    <!-- Element of the ajax contact form -->
                     <div class="row">
+                        <div class="col-md-6 form-group">
+                            <input name="name" type="text" class="form-control" placeholder="Name" required>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <input name="email" type="email" class="form-control" placeholder="Email" required>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <input name="phone" type="text" class="form-control" placeholder="Phone" required>
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <input name="subject" type="text" class="form-control" placeholder="Subject" required>
+                        </div>
+                        <div class="col-12 form-group">
+                            <textarea name="message" class="form-control" rows="3" placeholder="Message" required></textarea>
+                        </div>
                         <div class="col-12">
-                            <div class="alert alert-success contact__msg" style="display: none" role="alert">
-                                Your message was sent successfully.
-                            </div>
+                            <input name="submit" type="submit" class="button-style" value="Send Message">
                         </div>
                     </div>
-                    <!-- Ending of successful form message -->
-                </div>
-            </div>
-        </div>
-        </div>
-        <footer class="text-center pos-re">
-            <div class="container">
-                <div class="footer__box">
-                    <!-- Logo -->
-                    <a class="logo" href="#">
-                        <img src="img/logo-light.png" alt="logo">
-                    </a>
 
-                    <div class="social">
-                        <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+
+                </form>
+                <!-- Ending of ajax contact form -->
+                <!-- Starting of successful form message -->
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-success contact__msg" style="display: none" role="alert">
+                            Your message was sent successfully.
+                        </div>
                     </div>
-
-                    <p>&copy; 2018 Dejithemes. All Rights Reserved.</p>
                 </div>
+                <!-- Ending of successful form message -->
             </div>
+        </div>
+    </div>
+    </div>
+    <footer class="text-center pos-re">
+        <div class="container">
+            <div class="footer__box">
+                <!-- Logo -->
+                <a class="logo" href="#">
+                    <img src="img/logo-light.png" alt="logo">
+                </a>
 
-            <div class="curve curve-top curve-center"></div>
-        </footer>
+                <div class="social">
+                    <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#0"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                </div>
 
-        <script src="./js/jquery.min.js"></script>
-        <script src="./js/modernizr.custom.js"></script>
-        <script src="./js/bootstrap.min.js"></script>
-        <script src="./js/slick.min.js"></script>
-        <script src="./js/scrollreveal.min.js"></script>
-        <script src="./js/jquery.cubeportfolio.min.js"></script>
-        <script src="./js/jquery.matchHeight-min.js"></script>
-        <script src="./js/masonry.pkgd.min.js"></script>
-        <script src="./js/jquery.flexslider-min.js"></script>
-        <script src="./js/classie.js"></script>
-        <script src="./js/helper.js"></script>
-        <script src="./js/grid3d.js"></script>
-        <script src="./js/script.js"></script>
+                <p>&copy; 2018 Dejithemes. All Rights Reserved.</p>
+            </div>
+        </div>
+
+        <div class="curve curve-top curve-center"></div>
+    </footer>
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/modernizr.custom.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/scrollreveal.min.js"></script>
+    <script src="./js/jquery.cubeportfolio.min.js"></script>
+    <script src="./js/jquery.matchHeight-min.js"></script>
+    <script src="./js/masonry.pkgd.min.js"></script>
+    <script src="./js/jquery.flexslider-min.js"></script>
+    <script src="./js/classie.js"></script>
+    <script src="./js/helper.js"></script>
+    <script src="./js/grid3d.js"></script>
+    <script src="./js/script.js"></script>
 
 
 </body>
